:memo: updated notebooks to observe new structure with introduction

--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -9,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "db5a2cdb-6d02-4f7e-a95c-58ac16fe2251",
    "metadata": {},
@@ -16,8 +17,10 @@
     "As part of our demonstration of a simple ML workflow with LaminDB and PyTorch, we now demonstrate a basic process for ingesting data stored remotely (S3 bucket) into a LaminDB instance.\n",
     "\n",
     "```{note}\n",
-    "- For an introduction to the use case demonstration, please see [Ingesting a local ML dataset](./mnist-ingest-local.ipynb).\n",
-    "- For the PyTorch integration and training of the model, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
+    "- For an introduction to this four-part demonstration, please see [LaminDB use case: integrating with PyTorch to train a model on the MNIST dataset](./mnist-intro.ipynb).\n",
+    "- For ingesting the same dataset stored locally, please see [Ingesting a remote ML dataset](./mnist-ingest-local.ipynb).\n",
+    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
+    "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
     "```"
    ]
   },
@@ -186,7 +189,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.9.12"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6f775e615af92107a24a8dc5e93fe95ce25fd35096484e8bc738bef7b5ea6eb7"
+   }
   }
  },
  "nbformat": 4,
