--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -9,6 +9,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "e1128918-6573-4ae0-96f0-90ab1abd4ce3",
    "metadata": {},
@@ -22,9 +23,10 @@
     "In this notebook, we extend the LaminDB schema by creating a `HandwrittenNumber` entity, which represents the labels of our MNIST images. We will see how this feature dramatically improves the experience of handling features and their respectives labels in a ML workflow.\n",
     "\n",
     "```{note}\n",
-    "- For an introduction to the use case demonstration, please see [Ingesting a local ML dataset](./mnist-ingest-local.ipynb).\n",
-    "- For an overview of the process of ingesting data into LaminDB, please see [Ingesting a local ML dataset](./mnist-ingest-local.ipynb) or [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
-    "- For the PyTorch integration and training of the model, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
+    "- For an introduction to this four-part demonstration, please see [LaminDB use case: integrating with PyTorch to train a model on the MNIST dataset](./mnist-intro.ipynb).\n",
+    "- For ingesting the MNIST dataset stored locally, please see [Ingesting a remote ML dataset](./mnist-ingest-local.ipynb).\n",
+    "- For ingesting the MNIST dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
+    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
     "```"
    ]
   },
