--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -11,19 +11,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a9012bc-afa6-423c-8932-6d96422c4a18",
    "metadata": {},
    "source": [
-    "LaminDB makes it easy to prepare raw datasets to be handled by ML workflow tools.\n",
-    "\n",
-    "To illustrate our point, we will train a basic autoencoder with PyTorch based on a abridged [MNIST dataset](http://yann.lecun.com/exdb/mnist/) with 100 images. We will show how LaminDB integrates seamlessly with PyTorch by providing useful abstractions for loading and querying data when building a PyTorch `Dataset`.\n",
-    "\n",
-    "This notebook demonstrates a basic process for ingesting locally-stored data into a LaminDB instance.\n",
+    "As part of our demonstration of a simple ML workflow with LaminDB and PyTorch, this notebook demonstrates a basic process for ingesting locally-stored data into a LaminDB instance.\n",
     "\n",
     "```{note}\n",
+    "- For an introduction to this four-part demonstration, please see [LaminDB use case: integrating with PyTorch to train a model on the MNIST dataset](./mnist-intro.ipynb).\n",
     "- For ingesting the same dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
-    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb)\n",
+    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
+    "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
     "```"
    ]
   },
@@ -206,6 +205,11 @@
    "user_id": "DzTjkKse",
    "user_name": "Test User1",
    "version": "0"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "6f775e615af92107a24a8dc5e93fe95ce25fd35096484e8bc738bef7b5ea6eb7"
+   }
   }
  },
  "nbformat": 4,
