:art: updated calls to ln.DFolder and cleaned up notebooks

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -141,16 +141,15 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lamindb.schema as lns\n",
     "\n",
     "# Select MNIST folder\n",
-    "mnist_folder = ln.select(lns.DFolder, name=\"mnist\").one()\n",
+    "mnist_folder = ln.select(ln.DFolder, name=\"mnist\").one()\n",
     "\n",
     "# Query and load the data object containing the labels dataframe\n",
     "labels_dobject = (\n",
     "    ln.select(ln.DObject)\n",
     "    .join(ln.DObject.dfolders)\n",
-    "    .where(lns.DFolder.id == mnist_folder.id)\n",
+    "    .where(ln.DFolder.id == mnist_folder.id)\n",
     "    .where(ln.DObject.suffix == \".csv\")\n",
     ").one()\n",
     "labels_df = labels_dobject.load()\n",
@@ -166,7 +165,7 @@
     "    feature_dobjects = (\n",
     "        session.select(ln.DObject)\n",
     "        .join(ln.DObject.dfolders)\n",
-    "        .where(lns.DFolder.id == mnist_folder.id)\n",
+    "        .where(ln.DFolder.id == mnist_folder.id)\n",
     "        .where(ln.DObject.suffix == \".png\")\n",
     "    ).all()\n",
     "\n",
@@ -270,7 +269,6 @@
    "outputs": [],
    "source": [
     "from torch.utils.data import Dataset\n",
-    "from torchvision.io import read_image\n",
     "from torchvision.transforms import ToTensor\n",
     "from PIL import Image\n",
     "\n",
@@ -278,12 +276,12 @@
     "\n",
     "\n",
     "class LNDataset(Dataset):\n",
-    "    def __init__(self, dfolder: lns.DFolder):\n",
+    "    def __init__(self, dfolder: ln.DFolder):\n",
     "        # query dobjects in the data folder\n",
     "        self.dobjects = (\n",
     "            ln.select(ln.DObject)\n",
     "            .join(ln.DObject.dfolders)\n",
-    "            .where(lns.DFolder.id == dfolder.id)\n",
+    "            .where(ln.DFolder.id == dfolder.id)\n",
     "        ).all()\n",
     "\n",
     "        # define features and labels\n",
