--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -90,7 +90,6 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lamindb.schema as lns\n",
     "\n",
     "ln.nb.header()"
    ]
@@ -158,7 +157,7 @@
    "outputs": [],
    "source": [
     "# create folder for linking to mnist data objects\n",
-    "mnist_folder = lns.DFolder(name=\"mnist\")\n",
+    "mnist_folder = ln.DFolder(name=\"mnist\")\n",
     "\n",
     "# create dobjects and link them to mnist folder\n",
     "dobjects = [ln.DObject(filepath) for filepath in files]\n",
