--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -88,7 +88,6 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lamindb.schema as lns\n",
     "\n",
     "ln.nb.header()"
    ]
@@ -161,7 +160,7 @@
    "outputs": [],
    "source": [
     "# create folder for linking to mnist data objects\n",
-    "mnist_folder = lns.DFolder(name=\"mnist\")\n",
+    "mnist_folder = ln.DFolder(name=\"mnist\")\n",
     "\n",
     "# create dobjects and link them to mnist folder\n",
     "dobjects = [ln.DObject(data=cloudpath) for cloudpath in dobject_uris]\n",
