--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -60,7 +60,6 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
-    "import lamindb.schema as lns\n",
     "\n",
     "ln.nb.header()"
    ]
@@ -96,10 +95,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
     "from torch.utils.data import Dataset\n",
-    "from torchvision.io import read_image\n",
     "from torchvision.transforms import ToTensor\n",
     "from PIL import Image\n",
     "\n",
@@ -108,12 +104,12 @@
     "\n",
     "\n",
     "class LNDataset(Dataset):\n",
-    "    def __init__(self, dfolder: lns.DFolder):\n",
+    "    def __init__(self, dfolder: ln.DFolder):\n",
     "        # query dobjects in the data folder\n",
     "        self.dobjects = (\n",
     "            ln.select(ln.DObject)\n",
     "            .join(ln.DObject.dfolders)\n",
-    "            .where(lns.DFolder.id == dfolder.id)\n",
+    "            .where(ln.DFolder.id == dfolder.id)\n",
     "        ).all()\n",
     "\n",
     "        # define features and labels\n",
@@ -165,7 +161,7 @@
     "from torch.utils.data import random_split, DataLoader\n",
     "\n",
     "# create our custom Dataset\n",
-    "mnist_folder = ln.select(lns.DFolder, name=\"mnist\").one()\n",
+    "mnist_folder = ln.select(ln.DFolder, name=\"mnist\").one()\n",
     "mnist_dataset = LNDataset(mnist_folder)\n",
     "\n",
     "# define train and test splits\n",
@@ -200,9 +196,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import os\n",
-    "from torch import optim, nn, utils, Tensor\n",
-    "from torch.nn import functional as F\n",
+    "from torch import optim, nn\n",
     "from torchmetrics import Accuracy\n",
     "import pytorch_lightning as pl\n",
     "\n",
