:bento: ingested a subset of the files locally

--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -120,11 +120,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
    "metadata": {},
    "source": [
-    "Let's first get the paths to the locally-stored data objects."
+    "Let's first get the paths to the locally-stored data objects. Here we only get a few files for the sake of example."
    ]
   },
   {
@@ -134,9 +135,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pathlib import Path\n",
+    "from urllib.request import urlretrieve\n",
     "\n",
-    "files = Path(\"mnist_100/\").glob(\"*\")"
+    "files = []\n",
+    "for i in range(5):\n",
+    "    filepath, _ = urlretrieve(\n",
+    "        f\"https://bernardo-test-bucket-1.s3.eu-central-1.amazonaws.com/mnist_100/mnist_{i}.png\"\n",
+    "    )\n",
+    "    files += [filepath]"
    ]
   },
   {
