:bento: set training instance to remote instance (full 100 image dataset)

--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -50,7 +50,7 @@
    "source": [
     "import lndb\n",
     "\n",
-    "lndb.load(\"mnist-local\")"
+    "lndb.load(\"mnist-remote\")"
    ]
   },
   {
