:memo: initialized notebooks

--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -10,7 +10,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -255,6 +254,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "nbproject": {
+   "id": "H7eJhX56hR1C",
+   "parent": null,
+   "pypackage": null,
+   "time_init": "2023-02-24T01:27:04.872054+00:00",
+   "user_handle": "testuser1",
+   "user_id": "DzTjkKse",
+   "user_name": "Test User1",
+   "version": "0"
   },
   "vscode": {
    "interpreter": {
