--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -9,7 +9,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "db5a2cdb-6d02-4f7e-a95c-58ac16fe2251",
    "metadata": {},
@@ -189,6 +188,16 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.12"
+  },
+  "nbproject": {
+   "id": "uRC4kRaTBlBc",
+   "parent": null,
+   "pypackage": null,
+   "time_init": "2023-02-24T01:24:48.253592+00:00",
+   "user_handle": "testuser1",
+   "user_id": "DzTjkKse",
+   "user_name": "Test User1",
+   "version": "0"
   },
   "vscode": {
    "interpreter": {
