:bento: pulled all assets from mnist dataset locally

--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -11,7 +11,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "7a9012bc-afa6-423c-8932-6d96422c4a18",
    "metadata": {},
@@ -120,12 +119,11 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
    "metadata": {},
    "source": [
-    "Let's first get the paths to the locally-stored data objects. Here we only get a few files for the sake of example."
+    "Let's first make sure that the data objects are locally-stored."
    ]
   },
   {
@@ -135,14 +133,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from urllib.request import urlretrieve\n",
+    "import boto3\n",
+    "from pathlib import Path\n",
     "\n",
-    "files = []\n",
-    "for i in range(5):\n",
-    "    filepath, _ = urlretrieve(\n",
-    "        f\"https://bernardo-test-bucket-1.s3.eu-central-1.amazonaws.com/mnist_100/mnist_{i}.png\"\n",
-    "    )\n",
-    "    files += [filepath]"
+    "s3 = boto3.resource(\"s3\")\n",
+    "bucket = s3.Bucket(\"bernardo-test-bucket-1\")\n",
+    "for obj in bucket.objects.filter(Prefix=\"mnist_100/\"):\n",
+    "    Path(obj.key).parent.mkdir(exist_ok=True)\n",
+    "    bucket.download_file(obj.key, obj.key)"
    ]
   },
   {
@@ -166,21 +164,13 @@
     "mnist_folder = ln.DFolder(name=\"mnist\")\n",
     "\n",
     "# create dobjects and link them to mnist folder\n",
-    "dobjects = [ln.DObject(filepath) for filepath in files]\n",
+    "dobjects = [ln.DObject(filepath) for filepath in Path(\"mnist_100/\").glob(\"*\")]\n",
     "mnist_folder.dobjects = dobjects\n",
     "\n",
     "# ingest all data objects\n",
     "ln.add(mnist_folder)\n",
     "ln.add(dobjects);"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "36995f4d-c038-4b7d-83b0-d8d57410dc05",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
