:bento: set local instance as training instance

--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -49,7 +49,7 @@
    "source": [
     "import lndb\n",
     "\n",
-    "lndb.load(\"mnist-remote\")"
+    "lndb.load(\"mnist-local\")"
    ]
   },
   {
