--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -119,20 +119,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
-   "metadata": {},
-   "source": [
-    "Let's first make sure that the data objects are locally-stored."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5efdaf9c-a9eb-4c77-bedc-d8718fdfcfcf",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
+    "# prepare local data\n",
     "import boto3\n",
     "from pathlib import Path\n",
     "\n",
@@ -144,13 +141,31 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
+   "metadata": {},
+   "source": [
+    "Assume we have a local directory of files that we'd like to ingest:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70f8b795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls -l mnist_100/*"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c79f86d-c7e7-4e2d-b54e-8dc399223d4d",
    "metadata": {},
    "source": [
-    "We now ingest each of the data objects based on their local path and link them to the relevant metadata.\n",
-    "\n",
-    "In our case, the metadata we want to link each `DObject` to is a `DFolder` entity so that we can later query data objects based on folders."
+    "Let's ingest each of them as a `DObject` and group them with a `DFolder`:"
    ]
   },
   {
