--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "545d165f-750b-4f5e-8b6d-c40444c807ef",
    "metadata": {},
    "source": [
-    "# Extending the LaminDB schema"
+    "# Training on images + metadata"
    ]
   },
   {
@@ -20,13 +21,7 @@
     "\n",
     "LaminDB allows users to create custom entities and link them to any existing schema entities through simple extensions of its core schema.\n",
     "\n",
-    "In this notebook, we extend the LaminDB schema by creating a `HandwrittenNumber` entity, which represents the labels of our MNIST images. We will see how this feature dramatically improves the experience of handling features and their respectives labels in a ML workflow.\n",
-    "\n",
-    "```{note}\n",
-    "- For ingesting the MNIST dataset stored locally, please see [Ingesting a remote ML dataset](./mnist-ingest-local.ipynb).\n",
-    "- For ingesting the MNIST dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
-    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
-    "```"
+    "In this notebook, we extend the LaminDB schema by creating a `HandwrittenNumber` entity, which represents the labels of our MNIST images. We will see how this feature dramatically improves the experience of handling features and their respectives labels in a ML workflow."
    ]
   },
   {
