--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -1,13 +1,14 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b10297e6-e772-4d8d-bb19-9d32b274df3f",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Ingesting a local ML dataset"
+    "# Ingest a local ML dataset"
    ]
   },
   {
@@ -23,14 +24,6 @@
     "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
     "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc2fc447-b740-43aa-a0d4-3ad682b29fe4",
-   "metadata": {},
-   "source": [
-    "## Creating a LaminDB instance"
    ]
   },
   {
@@ -91,31 +84,6 @@
     "import lamindb as ln\n",
     "\n",
     "ln.nb.header()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f46e53fc-181a-4793-831a-5888567fcb9e",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "`ln.nb` is an access point of one our open-source modules, nbproject.\n",
-    "\n",
-    "The call to `ln.nb.header()` initializes the notebook and enables key data provenance features.\n",
-    "\n",
-    "Whenever a data object is ingested into the instance from an initialized notebook, LaminDB automatically identifies the notebook where it came from and inserts the relevant provenance records in the database.\n",
-    "\n",
-    "For more details, check out our guide on [ingest and tracking data from notebook runs](https://lamin.ai/docs/db/guide/nb).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "937d591d-e1d4-4622-8815-f4d806ee7af9",
-   "metadata": {},
-   "source": [
-    "## Ingesting and linking data objects to folder"
    ]
   },
   {
