--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -1,12 +1,13 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Integrating LaminDB with PyTorch and training an autoencoder"
+    "# Training purely on images"
    ]
   },
   {
@@ -239,7 +240,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "py39",
    "language": "python",
    "name": "python3"
   },
@@ -253,7 +254,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.15"
   },
   "nbproject": {
    "id": "H7eJhX56hR1C",
@@ -267,7 +268,7 @@
   },
   "vscode": {
    "interpreter": {
-    "hash": "6f775e615af92107a24a8dc5e93fe95ce25fd35096484e8bc738bef7b5ea6eb7"
+    "hash": "61b4062b24dfb1010f420dad5aa3bd73a4d2af47d0ec44eafec465a35a9d7239"
    }
   }
  },
