--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -45,17 +45,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a149637-38e4-42d3-a790-e148a468bf4f",
    "metadata": {},
    "source": [
-    "We can extend the core LaminDB schema by writing our own SQLModel tables.\n",
+    "We can extend the core LaminDB schema by writing our own SQLModel ORMs.\n",
     "\n",
-    "As we are interested in creating an entity that will represent image labels (`HandwrittenNumber`) and will be associated to a data object, we will implement a `SQLModel` class with a relationship to a `DObject`.\n",
+    "We'd like to link `HandwrittenNumber` records to `DObject` records (the images).\n",
     "\n",
-    "There are three simple steps in the addition of a linked entity:\n",
-    "- Creation of a linked table between the new entity (`HandwrittenNumber`) and the target entity (`DObject`).\n",
-    "- Creation of the new entity table with an attribute referencing the target entity (ORM relationship attribute).\n",
+    "As `HandwrittenNumber` is not present in any of the default schema modules, we need to go through 3 steps:\n",
+    "- Creation of a LinkORM between the new entity (`HandwrittenNumber`) and the target entity (`DObject`).\n",
+    "- Creation of the `HandwrittenNumber` ORM with an attribute referencing the target entity (relationship).\n",
     "- Creation of the ORM relationship attribute in the target entity.\n",
     "\n",
     "Let's see how we can do this in practice.\n",
@@ -112,11 +113,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2520f19a-246b-4593-a6bd-ca827165d6b9",
    "metadata": {},
    "source": [
-    "## Linking data objects to their respective labels"
+    "## Linking images to their labels"
    ]
   },
   {
@@ -177,11 +179,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3859d1c0-a8ca-4cf9-b204-c81c6047eeb0",
    "metadata": {},
    "source": [
-    "## Querying data objects by labels"
+    "## Querying images by labels"
    ]
   },
   {
@@ -216,11 +219,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be47c819-16b1-4660-b8e0-efdff9656ae0",
    "metadata": {},
    "source": [
-    "Let's query a random data object and get its label."
+    "Let's query a random data object and get its label. Also, use the relationship attribute:"
    ]
   },
   {
@@ -240,11 +244,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "39838c5b-0ba9-4d3d-89ff-faaf79f35c92",
    "metadata": {},
    "source": [
-    "## Redesigning our custom PyTorch `Dataset` with the LaminDB API"
+    "## Extending our custom PyTorch `Dataset` with the LaminDB API"
    ]
   },
   {
