--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -1,11 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "545d165f-750b-4f5e-8b6d-c40444c807ef",
    "metadata": {},
    "source": [
-    "# Extending the LaminDB schema"
+    "# Training on images + metadata"
    ]
   },
   {
@@ -20,14 +21,7 @@
     "\n",
     "LaminDB allows users to create custom entities and link them to any existing schema entities through simple extensions of its core schema.\n",
     "\n",
-    "In this notebook, we extend the LaminDB schema by creating a `HandwrittenNumber` entity, which represents the labels of our MNIST images. We will see how this feature dramatically improves the experience of handling features and their respectives labels in a ML workflow.\n",
-    "\n",
-    "```{note}\n",
-    "- For an introduction to this four-part demonstration, please see [LaminDB use case: integrating with PyTorch to train a model on the MNIST dataset](./mnist-intro.ipynb).\n",
-    "- For ingesting the MNIST dataset stored locally, please see [Ingesting a remote ML dataset](./mnist-ingest-local.ipynb).\n",
-    "- For ingesting the MNIST dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
-    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
-    "```"
+    "In this notebook, we extend the LaminDB schema by creating a `HandwrittenNumber` entity, which represents the labels of our MNIST images. We will see how this feature dramatically improves the experience of handling features and their respectives labels in a ML workflow."
    ]
   },
   {
@@ -51,17 +45,18 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a149637-38e4-42d3-a790-e148a468bf4f",
    "metadata": {},
    "source": [
-    "We can extend the core LaminDB schema by writing our own SQLModel tables.\n",
+    "We can extend the core LaminDB schema by writing our own SQLModel ORMs.\n",
     "\n",
-    "As we are interested in creating an entity that will represent image labels (`HandwrittenNumber`) and will be associated to a data object, we will implement a `SQLModel` class with a relationship to a `DObject`.\n",
+    "We'd like to link `HandwrittenNumber` records to `DObject` records (the images).\n",
     "\n",
-    "There are three simple steps in the addition of a linked entity:\n",
-    "- Creation of a linked table between the new entity (`HandwrittenNumber`) and the target entity (`DObject`).\n",
-    "- Creation of the new entity table with an attribute referencing the target entity (ORM relationship attribute).\n",
+    "As `HandwrittenNumber` is not present in any of the default schema modules, we need to go through 3 steps:\n",
+    "- Creation of a LinkORM between the new entity (`HandwrittenNumber`) and the target entity (`DObject`).\n",
+    "- Creation of the `HandwrittenNumber` ORM with an attribute referencing the target entity (relationship).\n",
     "- Creation of the ORM relationship attribute in the target entity.\n",
     "\n",
     "Let's see how we can do this in practice.\n",
@@ -118,11 +113,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "2520f19a-246b-4593-a6bd-ca827165d6b9",
    "metadata": {},
    "source": [
-    "## Linking data objects to their respective labels"
+    "## Linking images to their labels"
    ]
   },
   {
@@ -183,11 +179,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "3859d1c0-a8ca-4cf9-b204-c81c6047eeb0",
    "metadata": {},
    "source": [
-    "## Querying data objects by labels"
+    "## Querying images by labels"
    ]
   },
   {
@@ -222,11 +219,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "be47c819-16b1-4660-b8e0-efdff9656ae0",
    "metadata": {},
    "source": [
-    "Let's query a random data object and get its label."
+    "Let's query a random data object and get its label. Also, use the relationship attribute:"
    ]
   },
   {
@@ -246,11 +244,12 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "39838c5b-0ba9-4d3d-89ff-faaf79f35c92",
    "metadata": {},
    "source": [
-    "## Redesigning our custom PyTorch `Dataset` with the LaminDB API"
+    "## Extending our custom PyTorch `Dataset` with the LaminDB API"
    ]
   },
   {
