--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -1,16 +1,18 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "b10297e6-e772-4d8d-bb19-9d32b274df3f",
    "metadata": {
     "tags": []
    },
    "source": [
-    "# Ingesting a local ML dataset"
+    "# Ingest a local ML dataset"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "7a9012bc-afa6-423c-8932-6d96422c4a18",
    "metadata": {},
@@ -18,19 +20,10 @@
     "As part of our demonstration of a simple ML workflow with LaminDB and PyTorch, this notebook demonstrates a basic process for ingesting locally-stored data into a LaminDB instance.\n",
     "\n",
     "```{note}\n",
-    "- For an introduction to this four-part demonstration, please see [LaminDB use case: integrating with PyTorch to train a model on the MNIST dataset](./mnist-intro.ipynb).\n",
     "- For ingesting the same dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
     "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
     "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
     "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "fc2fc447-b740-43aa-a0d4-3ad682b29fe4",
-   "metadata": {},
-   "source": [
-    "## Creating a LaminDB instance"
    ]
   },
   {
@@ -94,45 +87,17 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f46e53fc-181a-4793-831a-5888567fcb9e",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "`ln.nb` is an access point of one our open-source modules, nbproject.\n",
-    "\n",
-    "The call to `ln.nb.header()` initializes the notebook and enables key data provenance features.\n",
-    "\n",
-    "Whenever a data object is ingested into the instance from an initialized notebook, LaminDB automatically identifies the notebook where it came from and inserts the relevant provenance records in the database.\n",
-    "\n",
-    "For more details, check out our guide on [ingest and tracking data from notebook runs](https://lamin.ai/docs/db/guide/nb).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "937d591d-e1d4-4622-8815-f4d806ee7af9",
-   "metadata": {},
-   "source": [
-    "## Ingesting and linking data objects to folder"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
-   "metadata": {},
-   "source": [
-    "Let's first make sure that the data objects are locally-stored."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "5efdaf9c-a9eb-4c77-bedc-d8718fdfcfcf",
-   "metadata": {},
+   "metadata": {
+    "tags": [
+     "hide-cell"
+    ]
+   },
    "outputs": [],
    "source": [
+    "# prepare local data\n",
     "import boto3\n",
     "from pathlib import Path\n",
     "\n",
@@ -144,13 +109,31 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "c4a1dafa-bbe4-4ac7-9e39-c7af9e17d54a",
+   "metadata": {},
+   "source": [
+    "Assume we have a local directory of files that we'd like to ingest:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70f8b795",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!ls mnist_100/*"
+   ]
+  },
+  {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "6c79f86d-c7e7-4e2d-b54e-8dc399223d4d",
    "metadata": {},
    "source": [
-    "We now ingest each of the data objects based on their local path and link them to the relevant metadata.\n",
-    "\n",
-    "In our case, the metadata we want to link each `DObject` to is a `DFolder` entity so that we can later query data objects based on folders."
+    "Let's ingest each of them as a `DObject` and group them with a `DFolder`:"
    ]
   },
   {
