--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -1,34 +1,12 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "30a10bd4-6e2b-42ce-aa04-01fdc1d5f7ab",
    "metadata": {},
    "source": [
-    "# Ingesting a remote ML dataset"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "db5a2cdb-6d02-4f7e-a95c-58ac16fe2251",
-   "metadata": {},
-   "source": [
-    "As part of our demonstration of a simple ML workflow with LaminDB and PyTorch, we now demonstrate a basic process for ingesting data stored remotely (S3 bucket) into a LaminDB instance.\n",
-    "\n",
-    "```{note}\n",
-    "- For an introduction to this four-part demonstration, please see [LaminDB use case: integrating with PyTorch to train a model on the MNIST dataset](./mnist-intro.ipynb).\n",
-    "- For ingesting the same dataset stored locally, please see [Ingesting a remote ML dataset](./mnist-ingest-local.ipynb).\n",
-    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
-    "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "51953b4c-8e71-4e7a-a1ab-c7984fa6c4e4",
-   "metadata": {},
-   "source": [
-    "## Creating a LaminDB instance"
+    "# Zero-copy ingest a remote ML dataset"
    ]
   },
   {
@@ -70,13 +48,14 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "022f9d1f-70e8-41de-b45e-57d5a6a9c4a5",
    "metadata": {},
    "source": [
     "Now that the instance has been set up with the existing storage, we must ingest the relevant data objects from storage into the instance so that we are able to track and query them.\n",
     "\n",
-    "During this step, LaminDB commits object metadata to the instance database (in this case, a local SQLite instance), which serves as the metadata and governance layer of our [data lakehouse](https://www.databricks.com/glossary/data-lakehouse)."
+    "During this step, LaminDB commits object metadata to the instance database (in this case, a local SQLite instance)."
    ]
   },
   {
@@ -89,31 +68,6 @@
     "import lamindb as ln\n",
     "\n",
     "ln.nb.header()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "df0fe60e-ec48-483b-9122-d248e29130a2",
-   "metadata": {},
-   "source": [
-    "```{note}\n",
-    "\n",
-    "`ln.nb` is an access point of one our open-source modules, nbproject.\n",
-    "\n",
-    "The call to `ln.nb.header()` initializes the notebook and enables key data provenance features.\n",
-    "\n",
-    "Whenever a data object is ingested into the instance from an initialized notebook, LaminDB automatically identifies the notebook where it came from and inserts the relevant provenance records in the database.\n",
-    "\n",
-    "For more details, check out our guide on [ingest and tracking data from notebook runs](https://lamin.ai/docs/db/guide/nb).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "bb1855dc-b1f3-48cb-a3a6-a093c6f11e2a",
-   "metadata": {},
-   "source": [
-    "## Ingesting and linking data objects to folder"
    ]
   },
   {
