:truck: Replace lndb with lamin

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -31,9 +31,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lndb\n",
+    "import lamin\n",
     "\n",
-    "lndb.load(\"mnist-local\")"
+    "lamin.load(\"mnist-local\")"
    ]
   },
   {
@@ -78,7 +78,7 @@
     "from sqlmodel import SQLModel, Field, Relationship\n",
     "from lnschema_core import DObject\n",
     "from lnschema_core.dev.sqlmodel import add_relationships\n",
-    "from lndb import settings\n",
+    "from lamin import settings\n",
     "from typing import Optional, List\n",
     "\n",
     "# Create linked table between new entity and target entity\n",
