--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -41,9 +41,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lndb\n",
+    "import lamin\n",
     "\n",
-    "lndb.init(storage=\"mnist-local\")"
+    "lamin.init(storage=\"mnist-local\")"
    ]
   },
   {
@@ -61,7 +61,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lndb.settings.instance"
+    "lamin.settings.instance"
    ]
   },
   {
