--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -24,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lndb\n",
+    "import lamin\n",
     "\n",
-    "lndb.init(name=\"mnist-remote\", storage=\"s3://bernardo-test-bucket-1\")"
+    "lamin.init(name=\"mnist-remote\", storage=\"s3://bernardo-test-bucket-1\")"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lndb.settings.instance"
+    "lamin.settings.instance"
    ]
   },
   {
