--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -48,9 +48,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lndb\n",
+    "import lamin\n",
     "\n",
-    "lndb.load(\"mnist-local\")"
+    "lamin.load(\"mnist-local\")"
    ]
   },
   {
