:memo: More simplification

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -31,9 +31,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamin\n",
-    "\n",
-    "lamin.load(\"mnist-local\")"
+    "!lamin load mnist-local"
    ]
   },
   {
@@ -62,7 +60,7 @@
     "Let's see how we can do this in practice.\n",
     "\n",
     "```{note}        \n",
-    "For more details about `SQLModel`, please refer to the [SQLModel documentation](https://sqlmodel.tiangolo.com/).\n",
+    "For more details about `SQLModel`, see the [SQLModel docs](https://sqlmodel.tiangolo.com/).\n",
     "\n",
     "For more details about defining relationships with `SQLModel`, please refer to [Relationship Attributes - Intro](https://sqlmodel.tiangolo.com/tutorial/relationship-attributes/).\n",
     "```"
