:green_heart: Fix

--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -16,7 +16,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin --name mnist-remote --storage s3://bernardo-test-bucket-1"
+    "!lamin init --name mnist-remote --storage s3://bernardo-test-bucket-1"
    ]
   },
   {
