--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!lamin --storage \"mnist-local\""
+    "!lamin init --storage \"mnist-local\""
    ]
   },
   {
