:memo: Small fixes

--- a/docs/guide/mnist-extend-schema.ipynb
+++ b/docs/guide/mnist-extend-schema.ipynb
@@ -6,7 +6,7 @@
    "id": "545d165f-750b-4f5e-8b6d-c40444c807ef",
    "metadata": {},
    "source": [
-    "# Training on images + metadata"
+    "# Train on images with queryable metadata"
    ]
   },
   {
@@ -268,8 +268,6 @@
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import ToTensor\n",
     "from PIL import Image\n",
-    "\n",
-    "ln.settings.track_run_inputs_upon_load = False\n",
     "\n",
     "\n",
     "class LNDataset(Dataset):\n",
