--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -7,7 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Training purely on images"
+    "# Train on images with metadata from csv"
    ]
   },
   {
@@ -66,9 +66,6 @@
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import ToTensor\n",
     "from PIL import Image\n",
-    "\n",
-    "# To maximize performance, let's disable tracking of each data object as inputs to this notebook run\n",
-    "ln.settings.track_run_inputs_upon_load = False\n",
     "\n",
     "\n",
     "class LNDataset(Dataset):\n",
