:memo: More simplification (#7)
* :memo: More simplification

* :green_heart: Fix

* :memo: Small fixes

--- a/docs/guide/mnist-ingest-local.ipynb
+++ b/docs/guide/mnist-ingest-local.ipynb
@@ -12,46 +12,13 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "7a9012bc-afa6-423c-8932-6d96422c4a18",
-   "metadata": {},
-   "source": [
-    "As part of our demonstration of a simple ML workflow with LaminDB and PyTorch, this notebook demonstrates a basic process for ingesting locally-stored data into a LaminDB instance.\n",
-    "\n",
-    "```{note}\n",
-    "- For ingesting the same dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
-    "- For building the PyTorch `Dataset` and training the autoencoder, please see [Integrating with PyTorch and training an autoencoder](./mnist-train.ipynb).\n",
-    "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "e39adb5c-35d9-4183-8c6b-4285c7ad295d",
-   "metadata": {},
-   "source": [
-    "Our first step is to create a LaminDB instance and ingest the local files."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "39677ddd-4985-4e09-b5d7-6baf16ef90a1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamin\n",
-    "\n",
-    "lamin.init(storage=\"mnist-local\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "b6fb506c-9896-40c5-bea4-da20baf602ce",
-   "metadata": {},
-   "source": [
-    "Let's take a look at our set up instance."
+    "!lamin init --storage \"mnist-local\""
    ]
   },
   {
@@ -61,17 +28,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamin.settings.instance"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "0246f26e-1b3a-47e2-9f92-ef1b39ec1e3e",
-   "metadata": {},
-   "source": [
-    "Now that the instance has been set up, we must ingest the relevant data objects from our local folder into the instance so that we are able to track and query them.\n",
-    "\n",
-    "During this step, LaminDB commits object metadata to the instance database (in this case, a local SQLite instance), which serves as the metadata and governance layer of our [data lakehouse](https://www.databricks.com/glossary/data-lakehouse)."
+    "!lamin info"
    ]
   },
   {
@@ -144,14 +101,14 @@
    "outputs": [],
    "source": [
     "# create folder for linking to mnist data objects\n",
-    "mnist_folder = ln.DFolder(name=\"mnist\")\n",
+    "dfolder = ln.DFolder(name=\"mnist\")\n",
     "\n",
     "# create dobjects and link them to mnist folder\n",
     "dobjects = [ln.DObject(filepath) for filepath in Path(\"mnist_100/\").glob(\"*\")]\n",
-    "mnist_folder.dobjects = dobjects\n",
+    "dfolder.dobjects = dobjects\n",
     "\n",
     "# ingest all data objects\n",
-    "ln.add(mnist_folder)\n",
+    "ln.add(dfolder)\n",
     "ln.add(dobjects);"
    ]
   }
