--- a/docs/guide/mnist-train.ipynb
+++ b/docs/guide/mnist-train.ipynb
@@ -7,32 +7,7 @@
     "tags": []
    },
    "source": [
-    "# Training purely on images"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "As part of our demonstration of a simple ML workflow with LaminDB and PyTorch, we now proceed to query the ingested data, prepare a PyTorch dataset, and train our simple autoencoder.\n",
-    "\n",
-    "This notebook focuses on the key interface between LaminDB and MLOps tools: the dataset abstraction.\n",
-    "\n",
-    "LaminDB provides fundamental building blocks (metadata-enriched object storage, expressive querying and streaming, and built-in data lineage) that simplify and enhance the process of building modular, special-purpose datasets for any ML workflow.\n",
-    "\n",
-    "```{note}\n",
-    "- For ingesting the MNIST dataset stored locally, please see [Ingesting a remote ML dataset](./mnist-ingest-local.ipynb).\n",
-    "- For ingesting the MNIST dataset stored in the cloud, please see [Ingesting a remote ML dataset](./mnist-ingest-remote.ipynb).\n",
-    "- For extending the LaminDB schema, please see [Extending the LaminDB schema](./mnist-extend-schema.ipynb).\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Accessing data"
+    "# Train on images with metadata from csv"
    ]
   },
   {
@@ -48,9 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamin\n",
-    "\n",
-    "lamin.load(\"mnist-local\")"
+    "!lamin load mnist-local"
    ]
   },
   {
@@ -68,20 +41,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Building a custom PyTorch dataset with LaminDB"
+    "## Build the Pytorch Dataset"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Most MLOps tools provide a modular, customizable abstraction over datasets. \n",
-    "\n",
-    "This is exactly where LaminDB comes into play: it not only simplifies the process of building these abstractions, but also integrates crucial features of decentralized data management (shared metadata layer, built-in data lineage, universal biological/biomedical ontologies) into the ML lifecyle.\n",
-    "\n",
-    "In the case of PyTorch, [that abstraction is the `torch.utils.data.Dataset` class](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html#creating-a-custom-dataset-for-your-files).\n",
-    "\n",
-    "In order to build a custom PyTorch `Dataset` class, one must inherit from `torch.utils.data.Dataset` and implement three key methods:\n",
+    "In order to build a custom PyTorch `Dataset` class, one must inherit from [`torch.utils.data.Dataset`](https://pytorch.org/tutorials/beginner/basics/data_tutorial.html#creating-a-custom-dataset-for-your-files) and implement three key methods:\n",
     "- `__init__`: initialize and load relevant data objects.\n",
     "- `__len__`: return the size of the dataset.\n",
     "- `__getitem__`: return a sample (feature-label pair) for model training or testing.\n",
@@ -98,9 +66,6 @@
     "from torch.utils.data import Dataset\n",
     "from torchvision.transforms import ToTensor\n",
     "from PIL import Image\n",
-    "\n",
-    "# To maximize performance, let's disable tracking of each data object as inputs to this notebook run\n",
-    "ln.settings.track_run_inputs_upon_load = False\n",
     "\n",
     "\n",
     "class LNDataset(Dataset):\n",
@@ -173,12 +138,13 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "tags": []
    },
    "source": [
-    "## Train the model (PyTorch Lightning)"
+    "## Train the model with PyTorch Lightning"
    ]
   },
   {
