--- a/docs/guide/mnist-ingest-remote.ipynb
+++ b/docs/guide/mnist-ingest-remote.ipynb
@@ -10,31 +10,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "b23e4f7d-9301-4440-b793-c8a2f8c2df8d",
-   "metadata": {},
-   "source": [
-    "Our first step is to create a LaminDB instance and ingest the local files."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "id": "f723505b-8140-498f-96e7-d7da0cc12797",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import lamin\n",
-    "\n",
-    "lamin.init(name=\"mnist-remote\", storage=\"s3://bernardo-test-bucket-1\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "781e91a9-dec6-4856-a9be-a11e4b2015cd",
-   "metadata": {},
-   "source": [
-    "Let's take a look at our set up instance."
+    "!lamin init --name mnist-remote --storage s3://bernardo-test-bucket-1"
    ]
   },
   {
@@ -44,18 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "lamin.settings.instance"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "id": "022f9d1f-70e8-41de-b45e-57d5a6a9c4a5",
-   "metadata": {},
-   "source": [
-    "Now that the instance has been set up with the existing storage, we must ingest the relevant data objects from storage into the instance so that we are able to track and query them.\n",
-    "\n",
-    "During this step, LaminDB commits object metadata to the instance database (in this case, a local SQLite instance)."
+    "!lamin info"
    ]
   },
   {
@@ -66,16 +37,18 @@
    "outputs": [],
    "source": [
     "import lamindb as ln\n",
+    "import boto3\n",
     "\n",
     "ln.nb.header()"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "9a0103f0-1c5d-4c36-b9d0-2bd091d12800",
    "metadata": {},
    "source": [
-    "Let's first get the URIs to the remotely-stored data objects."
+    "Say, we have a list of URIs remotely-stored data objects."
    ]
   },
   {
@@ -85,24 +58,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import boto3\n",
-    "\n",
-    "s3 = boto3.resource(\"s3\")\n",
-    "bucket = s3.Bucket(\"bernardo-test-bucket-1\")\n",
-    "dobject_uris = [\n",
+    "bucket = boto3.resource(\"s3\").Bucket(\"bernardo-test-bucket-1\")\n",
+    "file_uris = [\n",
     "    f\"s3://{bucket.name}/{object.key}\"\n",
     "    for object in bucket.objects.filter(Prefix=\"mnist_100/\")\n",
     "]"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "f806c9a1-d6f8-4cb8-9d69-77e4955421ef",
    "metadata": {},
    "source": [
     "Let's now ingest each of the data objects based on their URI and link them to the relevant metadata.\n",
     "\n",
-    "In our case, the metadata we want to link each `DObject` to is a `DFolder` entity so that we can later query data objects based on folders."
+    "In our case, the metadata we want to link each `DObject` to is a `DFolder` entity so that we can later query data objects based on folders.\n",
+    "\n",
+    "No data is copied, here! We merely enable queryability!"
    ]
   },
   {
@@ -113,14 +86,14 @@
    "outputs": [],
    "source": [
     "# create folder for linking to mnist data objects\n",
-    "mnist_folder = ln.DFolder(name=\"mnist\")\n",
+    "dfolder = ln.DFolder(name=\"mnist\")\n",
     "\n",
     "# create dobjects and link them to mnist folder\n",
-    "dobjects = [ln.DObject(data=cloudpath) for cloudpath in dobject_uris]\n",
-    "mnist_folder.dobjects = dobjects\n",
+    "dobjects = [ln.DObject(data=cloudpath) for cloudpath in file_uris]\n",
+    "dfolder.dobjects = dobjects\n",
     "\n",
     "# ingest all data objects\n",
-    "ln.add(mnist_folder)\n",
+    "ln.add(dfolder)\n",
     "ln.add(dobjects);"
    ]
   }
